# drf_testing

./: Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
app_tests/: Makefile  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app_tests/migrations/: 0001_initial.py
testing/: asgi.py  local.py  settings.py  urls.py  wsgi.py
users/: serializers.py  urls.py  views.py
